# advent-of-code-2023

./: .editorconfig  .replit  AoC.hs  Main.hs  Makefile  advent-of-code.cabal  init-script-builder.sh  replit.nix
.devcontainer/: devcontainer.json
AoC/: Day01.hs  Day02.hs  Day03.hs  Day04.hs
app/: Main.hs
src/: AoC.hs
src/AoC/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs
test/AoC/: Day01Spec.hs  Day02Spec.hs  Day03Spec.hs  Day04Spec.hs  Day05Spec.hs  Day06Spec.hs  Day07Spec.hs  Day08Spec.hs  Day09Spec.hs
